[package]
edition = "2021"
name = "transaction-consumer"
version = "0.14.0"

[dependencies]
anyhow = "1"
futures = "0.3"
log = "0.4.14"
rdkafka = { version = "0.28.0", features = ["gssapi-vendored", "sasl", ] }
url = "2.2.2"
tokio = { version = "1.17", features = ["sync", "fs", "rt", "macros"] }

nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }

ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block" }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }

ton-block-compressor = { git = "https://github.com/broxus/ton-block-compressor" }
everscale-jrpc-client = { git = "https://github.com/broxus/everscale-jrpc.git" }

[target.'cfg(target_os = "macos")'.dependencies.rdkafka]
features = ["gssapi-vendored", "sasl"]
version = "0.28.0"
