[package]
name = "ever_jrpc_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3.21"
log = "0.4.17"
parking_lot = "0.12.0"
rand = "0.8.5"
reqwest = { version = ">=0.11.10", features = ["gzip", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
env_logger = "0.9.0"
